Added Enums to set Priority of a task